<resources>
    <string name="app_name">Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add_new">Add New</string>
    <string name="completed_word">Completed Word</string>
    <string name="new_word">New Word</string>
    <string name="completed_wordd">CompletedWord</string>
    <string name="meaning">Meaning</string>
    <string name="learnt">Learnt</string>
    <string name="synonyms">Synonyms</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="usage">Usage</string>
    <string name="add_usage">Add Usage</string>
    <string name="add_synonyms">Add Synonyms</string>
    <string name="add_meaning">Add Meaning</string>
</resources>