<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="word"
            type="com.example.dictionary.data.model.Word" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_floral_bg"
            tools:context=".ui.update_word.UpdateWordFragment">

            <TextView
                android:id="@+id/tvUpdateWord"
                style="@style/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="60dp"
                android:shadowColor="@color/purple_blue"
                android:shadowDx="6"
                android:shadowDy="6"
                android:shadowRadius="10"
                android:text="Update Word" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUpdateWord"
                android:layout_centerHorizontal="true"
                android:text="Title" />

            <EditText
                android:id="@+id/etTitle"
                style="@style/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
                android:layout_marginHorizontal="20dp"
                android:hint="Add Title"
                android:text="@{word.title}" />

            <TextView
                android:id="@+id/tvMeaning"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etTitle"
                android:layout_centerHorizontal="true"
                android:text="Meaning" />

            <EditText
                android:id="@+id/etMeaning"
                style="@style/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMeaning"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/add_meaning"
                android:text="@{word.meaning}" />


            <TextView
                android:id="@+id/tvSynonyms"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etMeaning"
                android:layout_centerHorizontal="true"
                android:text="Synonyms" />


            <EditText
                android:id="@+id/etSynonyms"
                style="@style/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSynonyms"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/add_synonyms"
                android:text="@{word.synonym}" />

            <TextView
                android:id="@+id/tvUsage"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etSynonyms"
                android:layout_centerHorizontal="true"
                android:text="@string/usage" />

            <EditText
                android:id="@+id/etUsage"
                style="@style/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsage"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/add_usage"
                android:text="@{word.usage}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateWord"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etUsage"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="120dp"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/purple_blue"
                android:elevation="@dimen/four_dp"
                android:stateListAnimator="@null"
                android:text="Update"
                android:translationZ="4dp"
                app:cornerRadius="16dp" />
        </RelativeLayout>
    </ScrollView>
</layout>